# studium-desktop

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  vitest.config.ts
.github/workflows/: release.yml
docs/: ReferenceImage.md  futureIdeas.md  initialPlan.md
docs/adr/: 0001-rust-owns-vault-parsing.md  0002-vec-for-vault-collections.md
sample-vault/: schedule.md
sample-vault/.studium/: config.toml
sample-vault/notes/: app-ideas.md  gym-routine.md  lecture-integrals.md  reading-sicp.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/theme/: base16.rs  error.rs  mod.rs  pywal.rs  watcher.rs
src-tauri/src/vault/: atomic.rs  error.rs  frontmatter.rs  mod.rs  vault.rs  watcher.rs
src-tauri/tests/: theme_core.rs  vault_core.rs
src/components/: AddRow.tsx  ContextMenu.test.tsx  ContextMenu.tsx  Page.test.tsx  Page.tsx  Pane.test.tsx  Pane.tsx  StatusBar.test.tsx  StatusBar.tsx  TopBar.test.tsx  TopBar.tsx  icons.tsx  settingsContext.ts  useContextMenu.tsx
src/config/: ConfigModal.test.tsx  ConfigModal.tsx  CustomizationSection.test.tsx  CustomizationSection.tsx  uiSettings.test.tsx  uiSettings.tsx
src/data/: format.test.ts  format.ts  mock.test.ts  mock.ts
src/home/: today.test.ts  today.ts
src/keyboard/: keymap.test.ts  keymap.ts  useKeymap.test.tsx  useKeymap.ts
src/notes/: Editor.test.tsx  Editor.tsx  livePreview.test.ts  livePreview.ts  note.test.ts  (+2 more)
(+56 files in other folders)
