[package]
name = "studium-desktop"
version = "0.1.0"
description = "Studium — local-first study dashboard"
authors = ["Juan Oliveira"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studium_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "1.1.2"
dirs = "6.0.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
tempfile = "3.27.0"

[dev-dependencies]
proptest = "1.11.0"

